# erc20-rs

./: CHANGELOG.md  Cargo.toml  EIP3009_DESIGN.md  LICENSE  LICENSE-MIT  MIGRATION_FROM_ERC20_RS.md  README.md
.github/workflows/: ci.yml
abi/: erc20.json  erc20_with_eip3009.json
examples/: basic_store.rs  lazy.rs  provider_ext.rs
src/: eip3009.rs  lazy_token.rs  lib.rs  provider.rs  types.rs
src/signing/: authorization.rs  eip712.rs  mod.rs
src/stores/: entry.rs
tests/: eip3009_example_test.rs  eip3009_integration_test.rs.disabled  lazy_token_tests.rs
tests/common/: mod.rs.disabled
