[package]
name = "erc20-rs"
version = "0.2.2"
edition = "2021"

authors = ["Joseph Livesey <joseph@semiotic.ai>"]
categories = ["finance", "api-bindings"]
description = "Rust SDK for ERC20"
homepage = "https://crates.io/crates/erc20-rs"
keywords = ["defi", "ethereum", "web3", "blockchain", "erc20"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/suchapalaver/erc20-rs"

[dependencies]
alloy-contract = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.0.41", default-features = false }
alloy-signer = { version = "1.0.41", default-features = false }
alloy-signer-local = { version = "1.0.41", default-features = false }
alloy-sol-types = { version = "1.4.1", features = ["json"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
testcontainers-modules = { version = "0.13", features = ["anvil"] }
alloy-rpc-types = "1.0.41"
serde_json = "1.0"
hex = "0.4"
