[package]
name = "alloy-erc20-full"
version = "1.0.0"
edition = "2021"
rust-version = "1.88.0"

authors = [
    "Joseph Livesey <joseph@semiotic.ai>",
    "leruaa (original alloy-erc20 author)",
]
categories = ["cryptography::cryptocurrencies", "data-structures"]
description = "Complete ERC20 SDK with read and write operations for Alloy. Forked from alloy-erc20."
homepage = "https://github.com/suchapalaver/erc20-rs"
keywords = ["alloy", "ethereum", "erc20", "defi", "web3"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/suchapalaver/erc20-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
known-tokens = []
lru-store = ["dep:lru", "dep:parking_lot"]

[dependencies]
alloy = { version = "1.1.1", features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "rpc",
    "rpc-types",
    "rpc-client",
    "contract",
    "sol-types",
] }
futures = "0.3"
bigdecimal = "0.4"
thiserror = "2.0"
once_cell = "1.21"
async-once-cell = "0.5"
async-trait = "0.1"
lru = { version = "0.16", optional = true }
parking_lot = { version = "0.12", optional = true, features = ["arc_lock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "full"] }
reqwest = "0.12"
dotenvy = "0.15"
alloy-node-bindings = "1.1"
alloy-signer-local = "1.1"

[[example]]
name = "provider_ext"
doc-scrape-examples = true

[[example]]
name = "basic_store"
doc-scrape-examples = true

[[example]]
name = "lazy"
doc-scrape-examples = true
